--- a/KPimKontactInterfaceConfig.cmake.in
+++ b/KPimKontactInterfaceConfig.cmake.in
@@ -18,3 +18,4 @@ endif()
 
 
 include("${CMAKE_CURRENT_LIST_DIR}/KPim@KF_MAJOR_VERSION@KontactInterfaceTargets.cmake")
+@PACKAGE_INCLUDE_QCHTARGETS@
