--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -3,7 +3,10 @@ description: Kontact Plugin Interface Library.
 tier: 3
 type: functional
 platforms:
-    - name: All
+    - name: Linux
+    - name: FreeBSD
+    - name: Windows
+    - name: macOS
 portingAid: false
 deprecated: false
 release: false
