--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,7 @@ target_link_libraries(KPim6KontactInterface
                       KF6::WindowSystem
                       KF6::I18n
                       KF6::KIOGui
-		      Qt6::DBus
+		      Qt::DBus
 )
 
 if (KONTACTINTERFACE_HAVE_X11)
