--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ ecm_setup_qtplugin_macro_names(
 
 find_package(Qt6DBus ${QT_REQUIRED_VERSION} CONFIG REQUIRED)
 if (Qt6Gui_VERSION VERSION_GREATER_EQUAL "6.10.0")
-   find_package(Qt6GuiPrivate ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+   find_package(Qt6GuiPrivate ${QT_REQUIRED_VERSION} REQUIRED NO_MODULE)
 endif()
 
 ########### Find packages ###########
