--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,25 +4,29 @@
 add_library(KPim6KontactInterface)
 add_library(KPim6::KontactInterface ALIAS KPim6KontactInterface)
 
-target_sources(KPim6KontactInterface PRIVATE
-    core.cpp
-    plugin.cpp
-    summary.cpp
-    processes.cpp
-    uniqueapphandler.cpp
-    pimuniqueapplication.cpp
-    processes.h
-    core.h
-    plugin.h
-    uniqueapphandler.h
-    pimuniqueapplication.h
-    summary.h)
+target_sources(
+    KPim6KontactInterface
+    PRIVATE
+        core.cpp
+        plugin.cpp
+        summary.cpp
+        processes.cpp
+        uniqueapphandler.cpp
+        pimuniqueapplication.cpp
+        processes.h
+        core.h
+        plugin.h
+        uniqueapphandler.h
+        pimuniqueapplication.h
+        summary.h
+)
 
 ecm_qt_declare_logging_category(KPim6KontactInterface HEADER kontactinterface_debug.h IDENTIFIER KONTACTINTERFACE_LOG CATEGORY_NAME org.kde.pim.kontactinterface
         OLD_CATEGORY_NAMES log_kontactinterface
-        DESCRIPTION "kontactinterface (pim lib)" EXPORT KONTACTINTERFACE)
+        DESCRIPTION "kontactinterface (pim lib)" EXPORT KONTACTINTERFACE
+)
 
-if (COMPILE_WITH_UNITY_CMAKE_SUPPORT)
+if(COMPILE_WITH_UNITY_CMAKE_SUPPORT)
     set_target_properties(KPim6KontactInterface PROPERTIES UNITY_BUILD ON)
 endif()
 
@@ -33,33 +37,40 @@ ecm_generate_export_header(KPim6KontactInterface
     USE_VERSION_HEADER
 )
 
-target_include_directories(KPim6KontactInterface INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface>")
-target_include_directories(KPim6KontactInterface PUBLIC "$<BUILD_INTERFACE:${KontactInterface_SOURCE_DIR}/src;${KontactInterface_BINARY_DIR}/src;${KontactInterface_BINARY_DIR}>")
-
-target_link_libraries(KPim6KontactInterface
-                     PUBLIC
-                      KF6::CoreAddons
-                      KF6::Parts
-                      KF6::XmlGui
-                     PRIVATE
-                      KF6::WindowSystem
-                      KF6::I18n
-                      KF6::KIOGui
-		      Qt::DBus
+target_include_directories(
+    KPim6KontactInterface
+    INTERFACE
+        "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface>"
+)
+target_include_directories(
+    KPim6KontactInterface
+    PUBLIC
+        "$<BUILD_INTERFACE:${KontactInterface_SOURCE_DIR}/src;${KontactInterface_BINARY_DIR}/src;${KontactInterface_BINARY_DIR}>"
 )
 
-if (KONTACTINTERFACE_HAVE_X11)
+target_link_libraries(
+    KPim6KontactInterface
+    PUBLIC KF6::CoreAddons KF6::Parts KF6::XmlGui
+    PRIVATE KF6::WindowSystem KF6::I18n KF6::KIOGui Qt::DBus
+)
+
+if(KONTACTINTERFACE_HAVE_X11)
     target_link_libraries(KPim6KontactInterface PRIVATE Qt::GuiPrivate)
 endif()
 
-set_target_properties(KPim6KontactInterface PROPERTIES
-    VERSION ${KONTACTINTERFACE_VERSION}
-    SOVERSION ${KONTACTINTERFACE_SOVERSION}
-    EXPORT_NAME KontactInterface
+set_target_properties(
+    KPim6KontactInterface
+    PROPERTIES
+        VERSION ${KONTACTINTERFACE_VERSION}
+        SOVERSION ${KONTACTINTERFACE_SOVERSION}
+        EXPORT_NAME KontactInterface
 )
 
-
-install(TARGETS KPim6KontactInterface EXPORT KPim6KontactInterfaceTargets ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+install(
+    TARGETS KPim6KontactInterface
+    EXPORT KPim6KontactInterfaceTargets
+    ${KDE_INSTALL_TARGETS_DEFAULT_ARGS}
+)
 
 ########### install files ###############
 
@@ -75,22 +86,25 @@ ecm_generate_headers(KontactInterface_CamelCase_HEADERS
   REQUIRED_HEADERS KontactInterface_HEADERS
 )
 
-install(FILES
-  ${CMAKE_CURRENT_BINARY_DIR}/kontactinterface_export.h
-  ${KontactInterface_HEADERS}
-  DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/kontactinterface
-  COMPONENT Devel
+install(
+    FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/kontactinterface_export.h
+        ${KontactInterface_HEADERS}
+    DESTINATION
+        ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/kontactinterface
+    COMPONENT Devel
 )
 
-install(FILES
-    ${KontactInterface_CamelCase_HEADERS}
-    DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/KontactInterface/
+install(
+    FILES ${KontactInterface_CamelCase_HEADERS}
+    DESTINATION
+        ${KDE_INSTALL_INCLUDEDIR}/KPim6/KontactInterface/KontactInterface/
     COMPONENT Devel
 )
 
 ecm_qt_install_logging_categories(EXPORT KONTACTINTERFACE FILE kontactinterface.categories DESTINATION ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
 
-if (BUILD_QCH)
+if(BUILD_QCH)
     ecm_add_qch(
         KPim6KontactInterface_QCH
         NAME KPim6KontactInterface
