--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,22 +69,11 @@ include(ECMQtDeclareLoggingCategory)
 include(ECMDeprecationSettings)
 include(ECMFeatureSummary)
 include(ECMSetupQtPluginMacroNames)
-include(ECMAddQch)
+include(ECMGenerateQDoc)
 
 include(ECMCheckOutboundLicense)
 file(GLOB_RECURSE ALL_SOURCE_FILES src/*.cpp src/*.h)
 ecm_check_outbound_license(LICENSES GPL-2.0-only  FILES ${ALL_SOURCE_FILES})
-
-option(
-    BUILD_QCH
-    "Build API documentation in QCH format (for e.g. Qt Assistant, Qt Creator & KDevelop)"
-    OFF
-)
-add_feature_info(
-    QCH
-    ${BUILD_QCH}
-    "API documentation in QCH format (for e.g. Qt Assistant, Qt Creator & KDevelop)"
-)
 
 add_definitions(-DTRANSLATION_DOMAIN=\"kontactinterfaces6\")
 
@@ -146,17 +135,6 @@ configure_file(
     config-kontactinterface.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/config-kontactinterface.h
 )
-if(BUILD_QCH)
-    ecm_install_qch_export(
-        TARGETS KPim6KontactInterface_QCH
-        FILE KPim6KontactInterfaceQchTargets.cmake
-        DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
-        COMPONENT Devel
-    )
-    set(PACKAGE_INCLUDE_QCHTARGETS
-        "include(\"\${CMAKE_CURRENT_LIST_DIR}/KPim6KontactInterfaceQchTargets.cmake\")"
-    )
-endif()
 
 configure_package_config_file(
     "${CMAKE_CURRENT_SOURCE_DIR}/KPimKontactInterfaceConfig.cmake.in"
