--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ ecm_setup_version(PROJECT VARIABLE_PREFIX KONTACTINTERFACE
 )
 
 ecm_setup_qtplugin_macro_names(
-    JSON_ARG2
+    MACRO_NAMES
         EXPORT_KONTACT_PLUGIN_WITH_JSON
     CONFIG_CODE_VARIABLE
         PACKAGE_SETUP_AUTOMOC_VARIABLES
